crates/gelx/tests/compile/macros/incorrect_args.stderr
error: no rules expected `invalid`
 --> tests/compile/macros/incorrect_args.rs:4:24
  |
4 |     gelx!(example_module, invalid);
  |                           ^^^^^^^ no rules expected this token in macro call
  |
note: while trying to match meta-variable `$query:literal`
 --> src/lib.rs
  |
  |     ($module:ident, $query:literal) => {
  |                     ^^^^^^^^^^^^^^
