crates/gelx/tests/compile/macros/incorrect_args.rs
use gelx::gelx;

fn main() {
	gelx!(example_module, invalid);
}
